--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>RUN BUDDY</h1>
-        What we do
+        What We Do What You Do Your Trainers Reach Out
     </body>
 
 </html>
