aligned nav bar

--- a/index.html
+++ b/index.html
@@ -3,43 +3,44 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
 
-    <header>
-        <h1>
-            <a href="/">RUN BUDDY</a>
-        </h1>
-        <nav>
-            <!-- unordered list element -->
-            <ul>
-                <!-- list item element -->
-                <li>
-                    <!-- anchor element -->
-                    <a href="#what-we-do">What We Do</a>
-                </li>
-                <li>
-                    <a href="#what-you-do">What You Do</a>
-                </li>
-                <li>
-                    <a href="#your-trainers">Your Trainers</a>
-                </li>
-                <li>
-                    <a href="#reach-out">Reach Out</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
+            <nav>
+                <!-- unordered list element -->
+                <ul>
+                    <!-- list item element -->
+                    <li>
+                        <!-- anchor element -->
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
     </head>
 
     <body>
-        <!-- navigation -->
+        <!-- navigation
         <header>
             <h1>
                 RUN BUDDY
             </h1>
         </header>
 
-        <!-- hero/jumbotron -->
+        <!-- hero/jumbotron 
         <section>
 
         </section>
@@ -54,17 +55,17 @@
             <h2>What You Do</h2>
         </section>
 
-        <!-- "meet the trainers" section -->
+        <!-- "meet the trainers" section-->
         <section>
             <h2>Meet The Trainers</h2>
         </section>
 
-        <!-- "reach out" section -->
+        <!-- "reach out" section-->
         <section>
             <h2>Reach Out</h2>
         </section>
 
-        <!-- footer -->
+        <!-- footer-->
         <footer>
             <h2> Made with love by Run Buddy</h2>
         </footer>
