--- a/index.html
+++ b/index.html
@@ -153,28 +153,36 @@
         </section>
 
         <!-- "reach out" section-->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
-            <div class="contact-info">
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.150233261437!2d-77.038723849871!3d38.89767967947027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b78e00410e73%3A0xac8125363999a8f!2s1600%20Pennsylvania%20Avenue%20NW%2C%20Washington%2C%20DC%2020500!5e0!3m2!1sen!2sus!4v1616381120480!5m2!1sen!2sus" 
-                    frameborder="0"
-                    height="400"
-                    width="400"
-                    style="border:0"
-                    allowfullscreen
-                 >
-                </iframe>
-            </div>
-
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br />
-                    Let us known and we'll be happy to talk to you!
-                </p>
-            </div>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+                <div class="contact-info">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.150233261437!2d-77.038723849871!3d38.89767967947027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b78e00410e73%3A0xac8125363999a8f!2s1600%20Pennsylvania%20Avenue%20NW%2C%20Washington%2C%20DC%2020500!5e0!3m2!1sen!2sus!4v1616381120480!5m2!1sen!2sus" 
+                        frameborder="0"
+                        height="400"
+                        width="400"
+                        style="border:0"
+                        allowfullscreen
+                    >
+                    </iframe>
+                
+                
+                    <div>
+                        <h3>Run Buddy</h3>
+                        <p>
+                            Any questions or concerns before signing up?
+                            <br />
+                            Let us known and we'll be happy to talk to you!
+                        </p>
+                        <address>
+                            55 Main Street <br />
+                            Some Town, Ca <br />
+                            12345<br />
+                            P: 555.RUN.BUDZ (555.786.2839)<br />
+                            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                        </address>
+                    </div>
+                </div>
         </section>
 
         <!-- footer-->
